<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">«Do Not Disturb» Fixer</string>
    <string name="give_dnd">Let «DND» permission</string>
    <string name="give_battery">Give rights to energy saving</string>
    <string name="enable_autostart">Check autostart</string>
    <string name="no_xiaomi">This is not Xiaomi</string>
    <string name="let_permission">Permission settings</string>
    <string name="about">About App</string>
    <string name="close">Close</string>
    <string name="gotit">Got it</string>
    <string name="apply_on_next_dnd">Mode will be used in next «Do not disturb» enabled</string>
    <string name="about_text">Application is created to solve the «Do not disturb» glitch on Xiaomi/Redmi smartphones of global versions.\n\nOn the main screen of the application, we can choose which mode will be set in the smartphone when activating the system «Do not disturb»\n\nFor the correct operation of the application, it is necessary to grant the necessary rights, the dialog will open by clicking on «Let permission»</string>
    <string name="permission_error">Seems like application has no permission, check permission</string>
    <string name="choose_mode">Choose mode, which will be used on system «DND» activated</string>
    <!-- modes-->
    <string name="chosen_contacts">Favorites contacts</string>
    <string name="silent">Silent</string>
    <string name="vibro">Vibration</string>
    <string name="off">Off</string>

    <string name="dnd_mode">Dnd Mode</string>

    <string name="background_type">Background work type</string>
    <string name="service">Service</string>
    <string name="receiver">Receiver</string>

    <string name="receiver_explanation">
        This mode uses a broadcast receiver to catch DND events, uses less battery power, and doesn\'t display notifications. It may not work in some cases, such as after the smartphone has been idle for a long time overnight.
    </string>

    <string name="service_explanation">This mode runs a foreground service with a persistent
        notification. It is the most reliable way to ensure the app works instantly, even after the
        phone has been idle for a long time. Recommended for Xiaomi/Redmi users if the "Receiver"
        mode fails.
    </string>

    <string name="service_title">Xiaomi DND</string>
    <string name="service_text">Watching for DND mode</string>
    <string name="notification_not_granted">Notification permission not granted, service unavailable</string>
</resources>